added image upload

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,6 +1,15 @@
 development:
   open_weather_key: <%= ENV['OW_KEY'] %>
+  cl_cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
+  cl_api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
+  cl_api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
 test:
   open_weather_key: <%= ENV['OW_KEY'] %>
+  cl_cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
+  cl_api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
+  cl_api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
 production:
   open_weather_key: <%= ENV['OW_KEY'] %>
+  cl_cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
+  cl_api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
+  cl_api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
